Disable chart zoom

--- a/index.html
+++ b/index.html
@@ -638,7 +638,8 @@
                 {
                     responsive: true,
                     displayModeBar: false,
-                    scrollZoom: false
+                    scrollZoom: false,
+                    doubleClick: false
                 }
             );
 
