More succinct tooltip

--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
             const popupContent = `
                 <div class="custom-popup">
                     <strong>${routeName}</strong><br>
-                    Tracks ${sourceName} level<br>
+                    Tracks ${sourceName}<br>
                     Status: <strong>${status.message}</strong>
                 </div>
             `;
